# mini-database

./: .gitignore  Cargo.toml  README.md
examples/: basic_usage.rs  benchmark_local.rs  benchmark_network.rs  complete_transaction.rs  database_client.rs  database_federation.rs  database_server.rs  graph_example.rs  join_queries.rs  two_databases.rs  two_network_databases.rs
src/: lib.rs
src/client/: batch.rs  database_client.rs  join.rs  mod.rs  network_client.rs  result.rs
src/core/: config.rs  database.rs  mod.rs
src/query/: builder.rs  executor.rs  graph_ops.rs  mod.rs
src/server/: connection_pool.rs  handler.rs  mod.rs  protocol.rs  server.rs
src/storage/: cache.rs  edge_store.rs  file_reader.rs  index.rs  mod.rs  node_store.rs
src/transaction/: config.rs  lock_manager.rs  manager.rs  mod.rs  transaction.rs  wal.rs
src/types/: edge.rs  mod.rs  node.rs  value.rs
src/utils/: error.rs  mod.rs  serde.rs
