[package]
name = "mini-database"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full", "net", "io-util", "time"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# File I/O and memory mapping
memmap2 = "0.9"
async-std = "1.12"

# Data structures
dashmap = "5.5"
lru = "0.12"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Compression
lz4_flex = "0.11"

# Configuration
config = "0.14"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

# Hashing
seahash = "4.1"

chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"

# New networking dependencies
bytes = "1.0"          # For efficient byte handling
futures = "0.3"        # Additional async utilities

tokio-util = { version = "0.7", features = ["io"] }
